platform-core: one INFO log per route pool registration
Registering a route pool printed one INFO line per member (500 lines for the
SSE reply-lane pool); it now prints a single summary - "Route pool {prefix}
with {n} instances started as {kernel|virtual} thread" - and releasing prints
"Route pool {prefix} stopped". Members are marked through a private
POOL_SIGNATURE sentinel (random negative per JVM) so the public register
signature is unchanged; ServiceDef.isPool feeds ServiceQueue.isControlRoute,
which demotes the per-member start/stop lines to DEBUG and touches no
dispatch behavior. A pool now requires at least 2 lanes (a single lane is
just a private function), and the member-touch warnings are removed - direct
member updates stay tolerated, silently.

Review touch-ups: RoutePoolTest pins the new count floor explicitly and its
non-canonical-prefix case uses count 2 so it reaches prefix validation again;
test comments and the @throws javadoc follow the new semantics.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>